--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "googleapis": "^118.0.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
-    "react-router-dom": "^6.11.2",
+    "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
